# the_silver_searcher

./: .gitignore  Makefile.am  bootstrap  build.sh  configure.ac  sanitize.sh  the_silver_searcher.spec.in
